[gd_scene load_steps=8 format=3 uid="uid://b6db178shbqs7"]

[ext_resource type="Script" path="res://scenes/menus/character_select.gd" id="1_rwohh"]
[ext_resource type="Texture2D" uid="uid://c5pjw3yatl1xv" path="res://assets/resources/ui/temp_char_select.jpg" id="1_wv4lt"]
[ext_resource type="Theme" uid="uid://dsqobkwl8vb1d" path="res://assets/resources/ui/char_select_theme.tres" id="2_8g5pv"]
[ext_resource type="Theme" uid="uid://cq8b07chjn5ft" path="res://assets/resources/ui/character_select_title.tres" id="3_pupnc"]
[ext_resource type="Theme" uid="uid://wetqpq70f54a" path="res://assets/resources/ui/stats_text.tres" id="3_xrucx"]
[ext_resource type="Theme" uid="uid://bmt4gjpkujwbe" path="res://assets/resources/ui/stats_label.tres" id="4_emq88"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_eeqie"]
texture = ExtResource("1_wv4lt")
modulate_color = Color(0.26905, 0.680351, 0.658096, 1)

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_rwohh")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_eeqie")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2
theme = ExtResource("2_8g5pv")

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_pupnc")
text = "Character Select"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Warrior" type="PanelContainer" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Warrior"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Class" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Warrior/VBoxContainer"]
layout_mode = 2
text = "Scout"

[node name="Stats Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Warrior/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_emq88")
text = "Base Stats
"

[node name="Stats" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Warrior/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_xrucx")
text = "HP: 100
Atk: 5
Range: Melee"

[node name="Select Scout" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Warrior/VBoxContainer"]
layout_mode = 2
text = "Select"

[node name="Upgrade Scout" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Warrior/VBoxContainer"]
layout_mode = 2
text = "Upgrade"

[node name="Slingshot" type="PanelContainer" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Slingshot"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Class" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Slingshot/VBoxContainer"]
layout_mode = 2
text = "Slingshot"

[node name="Stats Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Slingshot/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_emq88")
text = "Base Stats
"

[node name="Stats" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Slingshot/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_xrucx")
text = "HP: 75
Atk: 5
Range: Ranged"

[node name="Select Slingshot" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Slingshot/VBoxContainer"]
layout_mode = 2
text = "Select"

[node name="Upgrade Slingshot" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Slingshot/VBoxContainer"]
layout_mode = 2
text = "Upgrade"

[node name="Spellcaster" type="PanelContainer" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Spellcaster"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Class" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Spellcaster/VBoxContainer"]
layout_mode = 2
text = "Spellcaster"

[node name="Stats Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Spellcaster/VBoxContainer"]
layout_mode = 2
theme = ExtResource("4_emq88")
text = "Base Stats
"

[node name="Stats" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Spellcaster/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_xrucx")
text = "HP: 50
Atk: 10
Range: Ranged"

[node name="Select Spellcaster" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Spellcaster/VBoxContainer"]
layout_mode = 2
text = "Select"

[node name="Upgrade Spellcaster" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Spellcaster/VBoxContainer"]
layout_mode = 2
text = "Upgrade"

[node name="Panel" type="Panel" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Panel2" type="Panel" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Panel3" type="Panel" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="Back Button" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Back"

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Warrior/VBoxContainer/Select Scout" to="." method="_on_select_scout_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Warrior/VBoxContainer/Upgrade Scout" to="." method="_on_upgrade_scout_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Slingshot/VBoxContainer/Select Slingshot" to="." method="_on_select_slingshot_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Slingshot/VBoxContainer/Upgrade Slingshot" to="." method="_on_upgrade_slingshot_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Spellcaster/VBoxContainer/Select Spellcaster" to="." method="_on_select_spellcaster_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/Spellcaster/VBoxContainer/Upgrade Spellcaster" to="." method="_on_upgrade_spellcaster_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/Back Button" to="." method="_on_back_button_pressed"]
